--- a/public/styles/pages/category/categoryList.css
+++ b/public/styles/pages/category/categoryList.css
@@ -79,14 +79,13 @@
     flex-direction: column;
     justify-content: space-between;
     padding-top: 10px;
-    height: 100%;
+    height: calc(100% - 180px);
 }
 
 .category-list {
     font-weight: bold;
     margin: 10px 0;
     color: black;
-    flex: 1;
 }
 
 .category-footer {
@@ -108,6 +107,7 @@
     align-items: end;
     font-size: 18px;
     font-weight: 700;
+    margin-top: auto;
 }
 
 .logout a {
