--- a/public/styles/pages/category/categoryWrite.css
+++ b/public/styles/pages/category/categoryWrite.css
@@ -79,7 +79,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding-top: 10px;
-    height: 100%;
+    height: calc(100% - 150px);
 }
 
 .menu-contents p {
@@ -142,12 +142,12 @@
 }
 
 .category-list input {
-    width: 150px; /* 원하는 너비 */
-    height: 30px; /* 원하는 높이 */
-    padding: 5px; /* 여백 */
-    font-size: 14px; /* 폰트 크기 */
-    border: 1px solid #ccc; /* 테두리 스타일 */
-    border-radius: 4px; /* 테두리 둥글기 */
+    width: 150px;
+    height: 30px;
+    padding: 5px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 .category-list p {
