[황다영] 게시글 작성 마크업, css 완성

--- a/public/styles/init.css
+++ b/public/styles/init.css
@@ -29,6 +29,7 @@ body {
   font-family: 'Noto Sans KR', sans-serif;
   background-color: var(--body-bg);
   color: var(--mono-500);
+
 }
 
 
@@ -89,6 +90,7 @@ body {
 /* 레이아웃 */
 
 #wrap {
+  /* height: calc(100vh - 55px); */
   height: 100vh;
 }
 
