--- a/public/styles/pages/posts/postWrite.css
+++ b/public/styles/pages/posts/postWrite.css
@@ -8,16 +8,18 @@ body {
 
 
 #wrap {
-  /* overflow-x: hidden; */
-
+  overflow: hidden;
+  /* height: calc(100vh - ); */
 }
 
+/* #wrap::-webkit-scrollbar {
+  display: none;
+} */
 
-#wrap > .inner {
-  padding: 0;
-  padding-right: 15px;
-  padding-top: 5%;
-  
+
+#wrap > .container {
+  padding-top: 20%;
+ 
 }
 
 
@@ -28,14 +30,20 @@ body {
   border-radius: 10px;
   gap: 10px;
   width: 100%;
+
+}
+
+
+input, .contentArea {
+  box-sizing: border-box;
 }
 
 /* 카테고리 선택 */
 .category, #category {
   width: 60%;
-  height: 40px;
+  height: 45px;
   border-radius: 10px;
-  color: var(--mono-500);
+  color: var(--mono-400);
   /* padding: 0 10px; */
 }
 
@@ -67,26 +75,83 @@ select.category option {
 /* 제목 */
 .title, #title {
   width: 100%;
-  height: 40px;
+  height: 45px;
   border-radius: 10px;
+ 
 }
 
 /* 제목, 카테고리선택 부분 왼쪽 여백주기 */
 #title, #category {
   padding-left: 10px;
+  font-size: 15px;
 }
 
-/* 내용 */
+
+
+/* 내용 입력 */
+
+.contentArea {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
+  border-radius: 10px;
+
+  background-color: var(--mono-000);
+  padding: 15px;
+}
+
 #content {
   width: 100%;
-  max-height: 100%;
-  border-radius: 10px;
-  padding: 10px;
-  border: none;
-  outline: none;
+  height: 100%;
+  min-height: 350px;
   font-family: "noto Sans KR";
   font-size: 15px;
   color: var(--mono-400);
+  border: none;
+  outline: none;
+ 
   resize: none;
-
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-end; */
 }
+
+.upload::before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: var(--mono-100);
+  display: block;
+  margin-bottom: 15px;
+}
+
+.upload {
+  /* position: absolute;
+  bottom: 15px;
+  left: 15px; */
+}
+
+/* 파일업로드 */
+#file {
+  display: none;
+}
+
+.upload img {
+  width: 100%;
+  max-width: 30px;
+}
+
+/* [contenteditable="true"]:empty:before {
+  content: attr(placeholder);
+  display: block;
+  color: var(--mono-300);
+} */
+
+
+/* 작성완료버튼 */
+button[type="submit"] {
+  margin-top: 0;
+}
+
+
