--- a/src/views/client/category/userCategoryList.ejs
+++ b/src/views/client/category/userCategoryList.ejs
@@ -16,9 +16,11 @@
         <title>Document</title>
     </head>
     <body>
-        <section class="category-menu-bar">
+        <section class="category-menu-bar" id="categoryMenu">
             <div class="category-menu-bar-header">
-                <a href="/posts"><i class="fa-solid fa-x"></i></a>
+                <a href="javascript:void(0)" onclick="closeMenu()"
+                    ><i class="fa-solid fa-x"></i
+                ></a>
                 <a href="">
                     <i class="fa-solid fa-gear"></i>
                 </a>
@@ -77,6 +79,13 @@
                     window.location.href = "/login";
                 });
             });
+        </script>
+        <script>
+            function closeMenu() {
+                const menu = document.getElementById("categoryMenu");
+                menu.style.display = "none";
+                window.location.href = "/admin/category/:categoryId/posts";
+            }
         </script>
     </body>
 </html>
