--- a/src/views/admin/category/categoryWrite.ejs
+++ b/src/views/admin/category/categoryWrite.ejs
@@ -13,7 +13,7 @@
         />
         <link rel="stylesheet" href="/static/styles/reset.css" />
         <link rel="stylesheet" href="/static/styles/init.css" />
-        <title>카테고리 추가</title>
+        <title>카테고리 관리</title>
     </head>
     <body>
         <div class="category-setup-wrapper">
