--- a/src/views/client/category/userCategoryList.ejs
+++ b/src/views/client/category/userCategoryList.ejs
@@ -13,7 +13,7 @@
         />
         <link rel="stylesheet" href="/static/styles/reset.css" />
         <link rel="stylesheet" href="/static/styles/init.css" />
-        <title>Document</title>
+        <title>카테고리 목록</title>
     </head>
     <body>
         <section class="category-menu-bar" id="categoryMenu">
