--- a/public/styles/pages/category/categoryEdit.css
+++ b/public/styles/pages/category/categoryEdit.css
@@ -29,7 +29,7 @@
     position: absolute;
     right: 0px;
     top: 5px;
-    color: black;
+    color: var(--mono-500);
     font-size: 16px;
     padding: 15px;
     border-radius: 50%;
