--- a/public/styles/pages/category/categoryWrite.css
+++ b/public/styles/pages/category/categoryWrite.css
@@ -45,7 +45,7 @@
     position: absolute;
     right: 0px;
     top: 5px;
-    color: black;
+    color: var(--mono-500);
     font-size: 16px;
     padding: 15px;
     border-radius: 50%;
@@ -194,7 +194,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
+    background-color: var(--mono-000);
     width: 250px;
     height: 100px;
     border-radius: 10px;
@@ -218,7 +218,7 @@
 }
 
 .btn-cancel {
-    background-color: #ff8d8d;
+    background-color: var(--sub-color-5);
     border: none;
     padding: 5px 10px;
     border-radius: 10px;
@@ -227,14 +227,10 @@
 }
 
 .btn-confirm {
-    background-color: #9ccaff;
+    background-color: var(--sub-color-4);
     border: none;
     border-radius: 10px;
     padding: 5px 10px;
     cursor: pointer;
     font-weight: bold;
 }
-
-/* .hidden {
-    display: none;
-} */
