--- a/public/styles/pages/category/userCategoryList.css
+++ b/public/styles/pages/category/userCategoryList.css
@@ -86,11 +86,11 @@
 .category-list {
     font-weight: bold;
     margin: 10px 0;
-    color: black;
+    color: var(--mono-500);
 }
 
 .admin-setup i {
-    color: black;
+    color: var(--mono-500);
     font-size: 16px;
 }
 
@@ -110,7 +110,7 @@
 }
 
 .fa-right-from-bracket {
-    color: black;
+    color: var(--mono-500);
 }
 
 /* 로그아웃 창 */
@@ -122,7 +122,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
+    background-color: var(--mono-000);
     width: 250px;
     height: 100px;
     border-radius: 10px;
@@ -146,7 +146,7 @@
 }
 
 .btn-cancel {
-    background-color: #ff8d8d;
+    background-color: var(--sub-color-5);
     border: none;
     padding: 5px 10px;
     border-radius: 10px;
@@ -155,7 +155,7 @@
 }
 
 .btn-confirm {
-    background-color: #9ccaff;
+    background-color: var(--sub-color-4);
     border: none;
     border-radius: 10px;
     padding: 5px 10px;
