--- a/src/views/client/category/userCategoryList.ejs
+++ b/src/views/client/category/userCategoryList.ejs
@@ -84,7 +84,7 @@
             function closeMenu() {
                 const menu = document.getElementById("categoryMenu");
                 menu.style.display = "none";
-                window.location.href = "/admin/category/:categoryId/posts";
+                window.location.href = "/category/:categoryId/posts";
             }
         </script>
     </body>
