--- a/src/views/client/users/myPage.ejs
+++ b/src/views/client/users/myPage.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/static/styles/reset.css" />
-    <title>유저 전체 목록 조회 페이지</title>
+    <title>내 프로필 조회 페이지</title>
   </head>
   <body>
-    유저 전체 목록 조회 페이지
+    내 프로필 조회 페이지
   </body>
 </html>
