--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -4,10 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>게시글 리스트</title>
-  <link rel="stylesheet" href="/static/styles/common.css">
+  <link rel="stylesheet" href="/static/styles/pages/posts/postList.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   클라이언트 페이지 게시글 리스트
+  <br>
+  <% posts.forEach(function(post) { %>
+    <div>
+      <a href="/posts/<%= post.postId %>">
+        <h2><%= post.title %></h2>
+      </a>
+    </div>
+    <% }); %>
 </body>
 </html>
