--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -47,9 +47,10 @@
           },
           body: JSON.stringify(data),
         });
+        const responseData = await response.json();
         if (response.ok) {
           alert("로그인 성공");
-          location.href = "/";
+          document.cookie = `Authentication=Bearer ${await responseData.accessToken}; path=/; domain=localhost;`;
         } else {
           alert("로그인 실패");
         }
