--- a/src/views/admin/category/categoryList.ejs
+++ b/src/views/admin/category/categoryList.ejs
@@ -26,8 +26,10 @@
                 </a>
                 <div class="category-profile">
                     <i class="fa-solid fa-user"></i>
-                    <p class="category-nickName">닉네임</p>
-                    <p class="category-id">@ggaong</p>
+                    <div class="category-profile-info">
+                        <p class="category-nickName">닉네임[수정필요]</p>
+                        <p class="category-id">@ggaong[수정필요]</p>
+                    </div>
                 </div>
             </div>
             <div class="category-menu-bar-main">
