--- a/public/styles/pages/category/categoryWrite.css
+++ b/public/styles/pages/category/categoryWrite.css
@@ -3,13 +3,16 @@
 }
 
 .category-setup-menu-bar {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: var(--mono-000);
     padding: 15px;
     width: 280px;
     height: 100vh;
     position: relative;
     overflow-y: auto;
-    transition: width 0.3s ease;
+}
+
+.header-image {
+    background-color: var(--mono-000);
 }
 
 #header img {
@@ -34,7 +37,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding-top: 10px;
-    height: calc(100% - 180px);
+    height: calc(100% - 120px);
     width: 100%;
 }
 
@@ -45,10 +48,9 @@
 
 .category-profile {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    padding-bottom: 15px;
+    gap: 15px;
+    align-items: center;
+    padding-bottom: 10px;
     position: relative;
 }
 
@@ -64,8 +66,12 @@
 }
 
 .fa-user {
-    font-size: 35px;
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    padding: 14px;
+    width: 50px;
+    height: 50px;
     background-color: #d9d9d9;
     border-radius: 50%;
 }
@@ -73,13 +79,13 @@
 .category-nickName {
     padding: 10px 0 0;
     font-size: 15px;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .category-id {
-    font-size: 12px;
+    font-size: 11px;
     padding: 0 0 15px 0;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .category-id:after {
@@ -89,7 +95,7 @@
     bottom: -2px;
     height: 1px;
     width: 100%;
-    background: #a5a4a4;
+    background: #d9d9d9;
 }
 
 .logout {
