--- a/public/styles/pages/category/userCategoryList.css
+++ b/public/styles/pages/category/userCategoryList.css
@@ -39,16 +39,19 @@
 
 .category-profile {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
+    gap: 15px;
+    align-items: center;
     padding-bottom: 10px;
     position: relative;
 }
 
 .fa-user {
-    font-size: 35px;
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    padding: 14px;
+    width: 50px;
+    height: 50px;
     background-color: #d9d9d9;
     border-radius: 50%;
 }
@@ -56,13 +59,13 @@
 .category-nickName {
     padding: 10px 0 0;
     font-size: 15px;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .category-id {
-    font-size: 12px;
+    font-size: 11px;
     padding: 0 0 15px 0;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .category-id:after {
@@ -72,7 +75,7 @@
     bottom: -2px;
     height: 1px;
     width: 100%;
-    background: #a5a4a4;
+    background: #d9d9d9;
 }
 
 .category-menu-bar-main {
@@ -80,7 +83,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding-top: 10px;
-    height: calc(100% - 180px);
+    height: calc(100% - 100px);
 }
 
 .category-list {
