[김채연] 0925 로그인 화면 마크업 수정 및 css 제작

--- a/src/views/client/users/userEdit.ejs
+++ b/src/views/client/users/userEdit.ejs
@@ -19,7 +19,7 @@
       <main class="main">
         <div class="profile-edit">
           <img
-            src="profile.webp"
+            src="/static/images/profile.webp"
             alt="profile image"
             class="profile-thumbnail"
             width="100"
