--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,10 +3,19 @@
   <head>
     <%-include('./_layouts/meta.ejs') %>
     <link rel="stylesheet" href="/static/styles/style.scss" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="stylesheet" href="/static/styles/pages/users/login.css" />
   </head>
   <body>
-    <div>
-      <%-include('./_layouts/header.ejs') %>
+    <div class="wrap">
+      <img
+        src="/static/images/nanum-logo.png"
+        alt="logoimage"
+        class="logoimage"
+      />
       <div class="container">
         <form method="post">
           <div class="form-group">
@@ -19,7 +28,7 @@
               placeholder="아이디를 입력하세요"
             />
           </div>
-          <div class="form-group">
+          <div class="form-group b">
             <label for="password">패스워드</label>
             <input
               type="password"
@@ -31,6 +40,11 @@
           </div>
           <button type="submit" class="btn btn-primary">로그인</button>
         </form>
+        <div class="footer">
+          <a href="#"><span>비밀번호 찾기</span></a>
+          <a href="#"><span>아이디 찾기</span></a>
+          <a href="/views/signup"><span>회원가입</span></a>
+        </div>
       </div>
     </div>
     <script>
