--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -50,7 +50,7 @@
         const responseData = await response.json();
         if (response.ok) {
           alert("로그인 성공");
-          document.cookie = `Authentication=Bearer ${await responseData.accessToken}; path=/; domain=localhost;`;
+          document.cookie = `accessToken=Bearer ${await responseData.accessToken}; path=/; domain=localhost;`;
         } else {
           alert("로그인 실패");
         }
