--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -20,30 +20,25 @@
         <form method="post">
           <div class="form-group">
             <label for="id">아이디</label>
-            <input
-              type="text"
-              class="form-control"
-              id="id"
-              name="id"
-              placeholder="아이디를 입력하세요"
-            />
+            <input type="text" class="form-control" id="id" name="id" />
           </div>
           <div class="form-group b">
-            <label for="password">패스워드</label>
+            <label for="password">비밀번호</label>
             <input
               type="password"
               class="form-control"
               id="password"
               name="password"
-              placeholder="패스워드를 입력하세요"
             />
           </div>
           <button type="submit" class="btn btn-primary">로그인</button>
         </form>
         <div class="footer">
-          <a href="#"><span>비밀번호 찾기</span></a>
-          <a href="#"><span>아이디 찾기</span></a>
-          <a href="/views/signup"><span>회원가입</span></a>
+          <a href="#" class="find pw"><span>비밀번호 찾기</span></a>
+          <p>ㅣ</p>
+          <a href="#" class="find id"><span>아이디 찾기</span></a>
+          <p>ㅣ</p>
+          <a href="/views/signup" class="signup"><span>회원가입</span></a>
         </div>
       </div>
     </div>
