--- a/src/views/admin/posts/postList.ejs
+++ b/src/views/admin/posts/postList.ejs
@@ -7,5 +7,13 @@
 </head>
 <body>
   관리자 페이지 게시글 리스트
+
+  <% posts.forEach(function(post) { %>
+    <div>
+      <a href="/admin/posts/<%= post.postId %>">
+        <h2><%= post.title %></h2>
+      </a>
+      <p><%= post.content %></p>
+    <% }); %>
 </body>
 </html>
