--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -6,23 +6,60 @@
     <title>관리자 로그인</title>
   </head>
   <body>
-    <header>
-      <h1>나눔 숲<i class="fa-solid fa-tree"></i></h1>
-    </header>
-    <main>
-      <form action="/login" method="POST">
-        <div>
-          <label for="username">아이디</label>
-          <input type="text" id="userid" name="userid" required />
+    <div class="wrap">
+      <img
+        src="/static/images/nanum-logo.png"
+        alt="logoimage"
+        class="logoimage"
+      />
+      <div class="container">
+        <form method="post">
+          <div class="form-group">
+            <label for="id">아이디</label>
+            <input type="text" class="form-control" id="id" name="id" />
+          </div>
+          <div class="form-group b">
+            <label for="password">비밀번호</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary">로그인</button>
+        </form>
+        <div class="footer">
+          <a href="#" class="find pw"><span>비밀번호 찾기</span></a>
+          <p>ㅣ</p>
+          <a href="#" class="find id"><span>아이디 찾기</span></a>
+          <p>ㅣ</p>
+          <a href="/views/signup" class="signup"><span>회원가입</span></a>
         </div>
-        <div>
-          <label for="password">비밀번호</label>
-          <input type="password" id="password" name="password" required />
-        </div>
-        <div>
-          <button type="submit">로그인</button>
-        </div>
-      </form>
-    </main>
+      </div>
+    </div>
+    <script>
+      const form = document.querySelector("form");
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const id = document.querySelector("#id").value;
+        const password = document.querySelector("#password").value;
+        const data = { id, password };
+        const response = await fetch("/api/auth/login", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(data),
+        });
+        const responseData = await response.json();
+        if (response.ok) {
+          alert("로그인 성공");
+          document.cookie = `Authentication=Bearer ${await responseData.accessToken}; path=/; domain=localhost;`;
+        } else {
+          alert("로그인 실패");
+        }
+      });
+    </script>
   </body>
 </html>
