--- a/public/styles/pages/posts/postDetail.css
+++ b/public/styles/pages/posts/postDetail.css
@@ -4,4 +4,300 @@
 
 .post {
   background-color: var(--mono-000);
+  padding: 15px;
+  border-radius: 10px;
 }
+
+.postTop {
+  position: relative;
+  padding-bottom: 15px;
+}
+
+
+.postTopUser {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 5px;
+
+}
+/* 프로필 이미지*/
+.profileImg {
+  width: 100%;
+  max-width: 50px;
+  border-radius: 50%;
+}
+
+.userInfo {
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+  width: 40%;
+}
+
+/* 닉네임 */
+.nickname {
+  font-weight: 500;
+}
+
+/* 팔로우 버튼 */
+.postTopUser button {
+  border: 0;
+  background-color: var(--sub-color-3);
+  color: var(--mono-000);
+  font-size: var(--text-description);
+  padding: 3px 5px;
+  border-radius: 50px;
+  margin-left: 5px;
+}
+
+/* 유저 아이디 */
+.userId {
+  font-size: var(--text-description);
+  color: var(--mono-400);
+
+
+}
+/* 카테고리 */
+.category {
+  color: var(--primary);
+  border-radius: 30px;
+  outline: 1px solid var(--primary);
+  padding: 2px 7px;
+  position: absolute;
+  font-size: var(--text-description);
+  right: 0;
+  top: 0;
+}
+
+/* ----------글 제목/ 내용 부분-------------- */
+
+.title {
+  font-weight: 500;
+  font-size: var(--text-default);
+}
+
+.content {
+  margin: 0;
+}
+
+.createdAt {
+  font-size: 12px;
+  color: var(--mono-200);
+
+}
+
+.createdAt::after {
+  content:"";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: var(--mono-100);
+  margin: 5px 0;
+}
+
+/* 좋아요/ 댓글/ 즐겨찾기/ 공유 버튼 */
+.postButtons {
+  display: flex;
+  justify-content: flex-start;
+  gap: 15px;
+  padding-bottom: 15px;
+}
+
+.postButtons  a {
+  text-decoration: none;
+  color: var(--primary);
+}
+
+
+/* ---------- 댓글 부분-------------- */
+
+.comment {
+ 
+}
+
+.commentWriteWrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 0 20px 0;
+
+}
+
+/* 댓글 프로필사진 */
+.commentArea .profileImg {
+  max-width: 30px;
+
+}
+
+/* 댓글 작성 영역 */
+[contenteditable="true"]:empty:before {
+  content: attr(placeholder);
+  display: block;
+  color: var(--mono-300);
+  font-size: var(--text-description);
+}
+
+.commentWrite {
+  border-bottom: 1px solid var(--mono-100);
+  width: 65%;
+  padding: 5px 0;
+}
+
+.commentWrite:focus {
+  outline: none;
+  border-bottom: 1px solid var(--mono-300);
+}
+
+/* 댓글 등록 버튼 */
+.commentWriteWrap button {
+  margin-top: 0;
+  width: auto;
+  height: auto;
+  font-size: var(--text-description);
+  padding: 2px 10px;
+  border-radius: 50px;
+  background-color: var(--sub-color-3);
+  /* margin-left: auto; */
+}
+
+
+/* 댓글 리스트 영역 */
+.commentSingle {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.commentSingle img {
+  width: 30px;
+  height: 30px;
+
+}
+
+.commentSingle span {
+  font-size: 13px;
+}
+
+.commentSingle em {
+  font-size: 9px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  width: 120px;
+  display: inline-block;
+}
+
+.commentSingle .createdAt::after {
+  display: none;
+}
+
+.commentUser {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: calc(100% - 60px);
+  /* justify-content: space-between; */
+}
+
+/* 달려있는 댓글 */
+.commentArea p {
+  margin: 0;
+  
+}
+/* 좋아요 */
+.like {
+  display: flex;
+  flex-direction: column;
+  font-size: 13px;
+  color: var(--primary);
+}
+
+.like i {
+  font-size: var(--text-default);
+}
+
+/* 댓글 수정 삭제 대댓글 버튼 */
+.commentEditBtns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 0;
+  /* padding-left: auto; */
+}
+
+.commentEditBtns button {
+  background-color: transparent;
+  border: none;
+  color: var(--mono-300);
+  
+}
+
+
+/* 파일업로드 */
+.upload {
+  padding-right: 10px;
+}
+#file {
+  display: none;
+}
+
+.upload img {
+  width: 100%;
+  max-width: 18px;
+}
+
+
+/* ---------- 카테고리 & 글쓰기 플로팅 -------------- */
+.floatingMenu {
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.floatingMenu span {
+  position: relative;
+  display: block;
+  font-weight: 500;
+  border-radius: 10px;
+  padding: 10px 20px;
+  background-color: var(--sub-color-1);
+  font-size: 17px;
+  color: var(--mono-000);
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+}
+
+.floatingMenu span::after {
+  content: '';
+  position: absolute;
+  border-style: solid;
+  border-width: 13px 9px 0;
+  border-color: var(--sub-color-1) transparent;
+  display: block;
+  width: 0;
+  z-index: 1;
+  bottom: -9px;
+  right: 0;
+  
+}
+
+.floatingMenu button {
+  width: 60px;
+  height: 60px;
+  /* padding: 0px; */
+  border-radius: 50%;
+  background-color: var(--sub-color-1);
+  font-size: 25px;
+  border: none;
+  color: var(--mono-000);
+  /* text-shadow: 1px 1px 1px rgba(0,0,0,0.2); */
+  box-shadow: 2px 3px 3px rgba(0,0,0,0.2);
+}
+
